--- a/market-table.html
+++ b/market-table.html
@@ -145,41 +145,55 @@ function buildSymbolOptions(){
 
 // ------- render table -------
 function render(){
-  const tf   = tfSel.value;
-  const pick = symSel.value;
+  const tf   = tfSel.value;                       // daily/hourly
+  const pick = symSel.value;                      // from "Symbol" dropdown
   const q    = (searchEl.value||'').trim().toUpperCase();
-  const src = DATA[tf]||{};
-  const keys = new Set(pick && pick!=='ALL' ? [pick] : Object.keys(src));
-  Object.keys(SYMBOL_META).forEach(k=>keys.add(k));
+  const src  = DATA[tf] || {};
 
-  const rows=[];
-  for(const sym of [...keys]){
+  // רשימת הסימבולים להצגה (או ALL)
+  const keys = new Set(pick && pick !== 'ALL' ? [pick] : Object.keys(src));
+  // נוודא שגם כאלה שיש להם מטא יופיעו אם קיימים בנתונים
+  Object.keys(SYMBOL_META).forEach(k => keys.add(k));
+
+  const rows = [];
+  for (const sym of [...keys]) {
     const rec = src[sym];
-    if(!rec) continue;
-    const name = (SYMBOL_META[sym]?.name) || sym;
-    if(q && !sym.includes(q) && !name.toUpperCase().includes(q)) continue;
-    const tv  = TICK_VALUE[sym];
-    const usd = (rec.usd!=null) ? rec.usd : (isFinite(tv) ? rec.pips*tv : null);
-    rows.push({sym, name, trend:rec.trend, pips:rec.pips, usd, pct:rec.pct});
-  }
-  rows.sort((a,b)=>(b.pips||0)-(a.pips||0));
+    if (!rec) continue;
 
-  if(!rows.length){
+    const name = (SYMBOL_META[sym]?.name) || sym;
+    if (q && !sym.includes(q) && !name.toUpperCase().includes(q)) continue;
+
+    const tv  = TICK_VALUE[sym];
+    const usd = (rec.usd != null) ? rec.usd : (isFinite(tv) ? rec.pips * tv : null);
+
+    rows.push({ sym, name, trend: rec.trend, pips: rec.pips, usd, pct: rec.pct });
+  }
+
+  rows.sort((a,b) => (b.pips||0) - (a.pips||0));
+
+  if (!rows.length) {
     tbody.innerHTML = `<tr><td colspan="6" class="subtle">No rows to show.</td></tr>`;
   } else {
-   tbody.innerHTML = rows.map(r=wireRowClicks();>{
-  const ttxt = r.trend==='up'?'▲ up' : r.trend==='down'?'▼ down' : '—';
-  const tcls = r.trend==='up'?'good' : r.trend==='down'?'bad' : '';
-  return `<tr class="data-row" data-sym="${r.sym}">
-    <td>${r.sym}</td>
-    <td>${r.name}</td>
-    <td class="${tcls}" style="text-align:right">${ttxt}</td>
-    <td style="text-align:right">${fmtNum(r.pips)}</td>
-    <td style="text-align:right">${r.usd!=null?('$'+fmtNum(r.usd)):'—'}</td>
-    <td style="text-align:right">${r.pct!=null?(fmtNum(r.pct)+'%'):'—'}</td>
-  </tr>`;
-}).join('');
+    tbody.innerHTML = rows.map(r => {
+      const ttxt = r.trend === 'up'   ? '▲ up'
+                 : r.trend === 'down' ? '▼ down'
+                 : '—';
+      const tcls = r.trend === 'up'   ? 'good'
+                 : r.trend === 'down' ? 'bad'
+                 : '';
+
+      return `<tr class="data-row" data-sym="${r.sym}">
+        <td>${r.sym}</td>
+        <td>${r.name}</td>
+        <td class="${tcls}" style="text-align:right">${ttxt}</td>
+        <td style="text-align:right">${fmtNum(r.pips)}</td>
+        <td style="text-align:right">${r.usd!=null?('$'+fmtNum(r.usd)):'—'}</td>
+        <td style="text-align:right">${r.pct!=null?(fmtNum(r.pct)+'%'):'—'}</td>
+      </tr>`;
+    }).join('');                 // <<< חשוב!
   }
+
+  wireRowClicks && wireRowClicks(); // <<< אחרי שמילאנו את ה-tbody
   savePrefs();
 }
 
