--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@ button:hover{filter:brightness(1.05)}
 
     <div class="row">
       <div>
+        <div style="margin-bottom:10px;">
         <label for="fee">Fee per contract ($) – round-turn</label>
         <input id="fee" type="number" inputmode="decimal" step="0.01" placeholder="Auto-filled">
       </div>
